--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,11 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+  <link href="{% static 'css/base.css' %}" rel="stylesheet">
+  
   <title>TPDB Database</title>
 </head>
 <body>
-  {% block content %}
+  <div class="d-flex" id="wrapper">
+    <!-- Side Nav-->
+    {% include 'dashboard/navbar_side.html' %}
+    <div id="page-content-wrapper">
+      <!-- Top Nav -->
+      {% include 'dashboard/navbar_top.html' %}
+            
+      <!-- Main Content -->
+      <div class="container-fluid px-4">
+        {% block content %}
+        {% endblock %}
+      </div>
+    </div>
+  </div>
   
-  {%  endblock %}
+  <script src="{% static 'js/nav.js' %}"></script>
 </body>
 </html>
