--- a/members/templates/authentication/login.html
+++ b/members/templates/authentication/login.html
@@ -1,40 +1,48 @@
-{% extends 'dashboard/base.html' %}
-
-{% block content %}
-  <div class="container-fluid">
-    <div class="row justify-content-center align-items-center min-vh-100">
-        <div class="col-12 col-sm-7 col-md-6">
-            {% if messages %}
-                    {% for message in messages %}
-                        
-                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                            {{ message }}
-                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <title>TPDB Database</title>
+</head>
+<body>
+    <div class="container-fluid">
+        <div class="row justify-content-center align-items-center min-vh-100">
+            <div class="col-12 col-sm-7 col-md-6">
+                {% if messages %}
+                        {% for message in messages %}
+                            
+                            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                                {{ message }}
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+                <div class="card border-0 shadow">
+                    <div class="card-body">
+                        <div class="text-center mb-4">
+                            <h1>Traffic Police Database</h1>
                         </div>
-                    {% endfor %}
-                {% endif %}
-            <div class="card border-0 shadow">
-                <div class="card-body">
-                    <div class="text-center mb-4">
-                        <h1>Traffic Police Database</h1>
+                        <form action="" method="POST">
+                            {% csrf_token %}
+                            <div class="mb-3">
+                                <label for="exampleInputEmail1" class="form-label">Username</label>
+                                <input type="text" class="form-control" name="username" aria-describedby="emailHelp">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputPassword1" class="form-label">Password</label>
+                                <input type="password" class="form-control" name="password">
+                            </div>
+                            <div class="text-center mt-3">
+                              <input type="submit" value="Login" class="btn btn-primary"></input>
+                            </div>
+                        </form>
                     </div>
-                    <form action="" method="POST">
-                        {% csrf_token %}
-                        <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Username</label>
-                            <input type="text" class="form-control" name="username" aria-describedby="emailHelp">
-                        </div>
-                        <div class="mb-3">
-                            <label for="exampleInputPassword1" class="form-label">Password</label>
-                            <input type="password" class="form-control" name="password">
-                        </div>
-                        <div class="text-center mt-3">
-                          <input type="submit" value="Login" class="btn btn-primary"></input>
-                        </div>
-                    </form>
                 </div>
             </div>
         </div>
-    </div>
-  </div>
-{% endblock %}
+      </div>
+</body>
+</html>
