Updates: - Added Login requirement - Added change password functionality

--- a/dashboard/templates/dashboard/navbar_side.html
+++ b/dashboard/templates/dashboard/navbar_side.html
@@ -6,7 +6,7 @@
         <img src="{% static 'img/nottingham.png' %}" height="100" width="100" alt="logo">
     </div>
     <div class="list-group list-group-flush my-3">
-        <a href="#" class="list-group-item list-group-item-action bg-transparent second-text active"><i
+        <a href="/dashboard/" class="list-group-item list-group-item-action bg-transparent second-text active"><i
                 class="fas fa-home me-2"></i>Home</a>
         <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
                 class="fas fa-users me-2"></i>People</a>
@@ -16,9 +16,9 @@
                 class="fas fa-file-signature me-2"></i>Reports</a>
         <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
                 class="fas fa-user-shield me-2"></i>Admin</a>
-        <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
+        <a href="/settings/" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
                 class="fas fa-cog me-2"></i>Settings</a>
-        <a href="#" class="list-group-item list-group-item-action bg-transparent text-danger fw-bold"><i
+        <a href="{% url 'logout' %}" class="list-group-item list-group-item-action bg-transparent text-danger fw-bold"><i
                 class="fas fa-power-off me-2"></i>Logout</a>
     </div>
 </div>
