--- a/dashboard/templates/dashboard/navbar_top.html
+++ b/dashboard/templates/dashboard/navbar_top.html
@@ -20,10 +20,9 @@
                   role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   <i class="fas fa-user me-2"></i>{{ request.user.username }}
               </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Profile</a></li>
-                  <li><a class="dropdown-item" href="#">Settings</a></li>
-                  <li><a class="dropdown-item" href="#">Logout</a></li>
+              <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="{% url 'change-password' %}">Change Password</a></li>
+                  <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
               </ul>
           </li>
       </ul>
