--- a/members/templates/authentication/login.html
+++ b/members/templates/authentication/login.html
@@ -28,11 +28,11 @@
                         <form action="" method="POST">
                             {% csrf_token %}
                             <div class="mb-3">
-                                <label for="exampleInputEmail1" class="form-label">Username</label>
-                                <input type="text" class="form-control" name="username" aria-describedby="emailHelp">
+                                <label for="inputUsername" class="form-label">Username</label>
+                                <input type="text" class="form-control" name="username" aria-describedby="usernameHelp">
                             </div>
                             <div class="mb-3">
-                                <label for="exampleInputPassword1" class="form-label">Password</label>
+                                <label for="inputPassword" class="form-label">Password</label>
                                 <input type="password" class="form-control" name="password">
                             </div>
                             <div class="text-center mt-3">
