Changes: - Updated Navbar - added People - updated view restrictions

--- a/dashboard/static/css/base.css
+++ b/dashboard/static/css/base.css
@@ -74,14 +74,18 @@
 
 .list-group-item {
   border: none;
-  padding: 20px 30px;
+  padding: 10px 30px;
 }
 
 .list-group-item.active {
-  background-color: transparent;
-  color: var(--main-text-color);
-  font-weight: bold;
-  border: none;
+  background-color: transparent !important;
+  color: var(--main-text-color) !important;
+  border: none !important;
+}
+
+a.list-group-item:hover {
+  opacity: 0.7;
+  transition: opacity 0.3s;
 }
 
 @media (min-width: 768px) {
