--- a/dashboard/templates/dashboard/home.html
+++ b/dashboard/templates/dashboard/home.html
@@ -53,8 +53,8 @@
 <br>
 <div class="container">
 
-  <div class="row">
-    <div class="col">
+  <div class="row g-3 my-2">
+    <div class="col-md-6">
       <div class="p-3 bg-white shadow-sm rounded">
         <div class="fs-5 fw-bold">System Updates</div>
         <ul>
@@ -62,7 +62,7 @@
         </ul>
       </div>
     </div>
-    <div class="col">
+    <div class="col-md-6">
       <div class="p-3 bg-white shadow-sm rounded">
         <div class="fs-5 fw-bold">Quick Links</div>
         <ul>
