--- a/people/templates/people/people.html
+++ b/people/templates/people/people.html
@@ -1,14 +1,14 @@
-<!-- people_list.html -->
 {% extends 'dashboard/base.html' %}
 
 {% block content %}
+<br>
   <div class="container">
-    <a href="#" class="btn btn-primary">+ New Person</a>
+    <a href="{% url 'add_person' %}" class="input-group btn btn-primary fw-bolder">+ New Person</a>
     <form method="GET" class="mt-3">
       <div class="input-group mb-3">
         <input type="text" class="form-control" name="search_query" placeholder="Search by name or driving license number">
         <div class="input-group-append">
-          <button class="btn btn-outline-primary" type="submit">Search</button>
+          <button class="btn btn-primary" type="submit">Search</button>
         </div>
       </div>
     </form>
@@ -17,7 +17,8 @@
         <tr>
           <th>First Name</th>
           <th>Last Name</th>
-          <th>Driving License Number</th>
+          <th>Driving Licence Number</th>
+          <th>Address</th>
         </tr>
       </thead>
       <tbody>
@@ -25,11 +26,12 @@
             <tr>
               <td>{{ person.first_name }}</td>
               <td>{{ person.last_name }}</td>
-              <td>{{ person.driving_license_number }}</td>
+              <td>{{ person.driving_licence_number }}</td>
+              <td>{{ person.address1}}, {{person.city}}, {{person.post_code }}</td>
             </tr>
           {% empty %}
             <tr>
-              <td colspan="3">No people found.</td>
+              <td colspan="4">No people found.</td>
             </tr>
           {% endfor %}
       </tbody>
