--- a/reports/templates/reports/reports.html
+++ b/reports/templates/reports/reports.html
@@ -5,7 +5,7 @@
     <a href="{% url 'add_report' %}" class="input-group btn btn-primary fw-bolder">+ New Report</a>
     <form method="GET" class="mt-3">
       <div class="input-group mb-3">
-        <input type="text" class="form-control" name="search_query" placeholder="Search by ...">
+        <input type="text" class="form-control" name="search_query" placeholder="Search by name or incident description...">
         <div class="input-group-append">
           <button class="btn btn-primary" type="submit">Search</button>
         </div>
@@ -24,9 +24,15 @@
           {% for report in reports %}
             <tr>
               <td>{{ report.id }}</td>
-              <td>{{ report.incident_date }}</td>
-              <td>{{ report.model }}</td>
-              <td>{{ report.colour }}</td>
+              <td>{{ report.incident_date|date:"Y-m-d" }}</td>
+              <td>{{ report.incident_description }}</td>
+              <td>
+                {% if report.person %}
+                  {{ report.person.first_name }} {{ report.person.last_name }}
+                {% else %}
+                  N/A
+                {% endif %}
+              </td>
             </tr>
           {% empty %}
             <tr>
