--- a/vehicles/templates/vehicles/vehicles.html
+++ b/vehicles/templates/vehicles/vehicles.html
@@ -31,7 +31,7 @@
             </tr>
           {% empty %}
             <tr>
-              <td colspan="4">No people found.</td>
+              <td colspan="4">No vehicles found.</td>
             </tr>
           {% endfor %}
       </tbody>
