added borders to table

--- a/people/templates/people/people.html
+++ b/people/templates/people/people.html
@@ -12,9 +12,9 @@
         </div>
       </div>
     </form>
-    <table class="table">
+    <table class="table table-bordered">
       <thead>
-        <tr>
+        <tr class="table-dark">
           <th>First Name</th>
           <th>Last Name</th>
           <th>Driving Licence Number</th>
