--- a/reports/templates/reports/reports.html
+++ b/reports/templates/reports/reports.html
@@ -11,9 +11,9 @@
         </div>
       </div>
     </form>
-    <table class="table">
+    <table class="table table-bordered">
       <thead>
-        <tr>
+        <tr class="table-dark">
           <th>Incident ID</th>
           <th>Incident Date</th>
           <th>Incident Report</th>
