--- a/vehicles/templates/vehicles/vehicles.html
+++ b/vehicles/templates/vehicles/vehicles.html
@@ -12,9 +12,9 @@
         </div>
       </div>
     </form>
-    <table class="table">
+    <table class="table table-bordered">
       <thead>
-        <tr>
+        <tr class="table-dark">
           <th>Registration</th>
           <th>Make</th>
           <th>Model</th>
