--- a/dashboard/templates/dashboard/home.html
+++ b/dashboard/templates/dashboard/home.html
@@ -8,7 +8,7 @@
   <div class="col-md-3">
       <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
           <div>
-              <h3 class="fs-2">59</h3>
+              <h3 class="fs-2">{{ person_count }}</h3>
               <p class="fs-5 fw-bold">People</p>
           </div>
           <i class="fas fa-user fs-1 primary-text border rounded-full secondary-bg p-3"></i>
@@ -18,7 +18,7 @@
   <div class="col-md-3">
       <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
           <div>
-              <h3 class="fs-2">45</h3>
+              <h3 class="fs-2">{{ vehicle_count }}</h3>
               <p class="fs-5 fw-bold">Vehicles</p>
           </div>
           <i class="fas fa-car fs-1 primary-text border rounded-full secondary-bg p-3"></i>
@@ -28,7 +28,7 @@
   <div class="col-md-3">
       <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
           <div>
-              <h3 class="fs-2">59</h3>
+              <h3 class="fs-2">{{ report_count }}</h3>
               <p class="fs-5 fw-bold">Reports</p>
           </div>
           <i class="fas fa-file-signature fs-1 primary-text border rounded-full secondary-bg p-3"></i>
