--- a/dashboard/templates/dashboard/navbar_side.html
+++ b/dashboard/templates/dashboard/navbar_side.html
@@ -27,18 +27,20 @@
             <a href="/reports/" class="list-group-item list-group-item-action bg-transparent text-secondary-emphasis fw-medium">Reports</a>
         </div>
 
-        <!-- Separator Line -->
-        <hr class="my-2 mx-3">
+        {% if user.is_superuser %}
+            <!-- Separator Line -->
+            <hr class="my-2 mx-3">
 
-        <!-- Admin Tools Dropdown -->
-        <div class="list-group-item list-group-item-action bg-transparent second-text fw-bold">
-            <i class="fas fa-user-shield me-2"></i>Admin Tools
-        </div>
-        <div id="myTab">
-            <a href="/fines/" class="list-group-item list-group-item-action bg-transparent text-secondary-emphasis fw-medium">Add Fines</a>
-            <a href="/manage/" class="list-group-item list-group-item-action bg-transparent text-secondary-emphasis fw-medium">Manage Users</a>
-            <a href="/audit/" class="list-group-item list-group-item-action bg-transparent text-secondary-emphasis fw-medium">Audit Log</a>
-        </div>
+            <!-- Admin Tools Dropdown -->
+            <div class="list-group-item list-group-item-action bg-transparent second-text fw-bold">
+                <i class="fas fa-user-shield me-2"></i>Admin Tools
+            </div>
+            <div id="myTab">
+                <a href="/fines/" class="list-group-item list-group-item-action bg-transparent text-secondary-emphasis fw-medium">Add Fines</a>
+                <a href="/manage/" class="list-group-item list-group-item-action bg-transparent text-secondary-emphasis fw-medium">Manage Users</a>
+                <a href="/audit/" class="list-group-item list-group-item-action bg-transparent text-secondary-emphasis fw-medium">Audit Log</a>
+            </div>
+        {% endif %}
 
         <!-- Separator Line -->
         <hr class="my-2 mx-3">
